--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SoundRecorder</string>
+
+    <!-- An array containing the title of fragments shown in pager -->
+    <string-array name="fragment_titles">
+        <!-- Title of fragment to create new recording -->
+        <item>Record</item>
+        <!-- Title of fragment allowing browsing and playback of saved recordings -->
+        <item>Saved</item>
+    </string-array>
+
 </resources>
