--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,14 @@
         <item>Saved</item>
     </string-array>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Default name of a new recording -->
+    <string name="default_file_name" translatable="false">My Recording</string>
+
+    <!-- Default file extension of a new recording -->
+    <string name="default_file_extension" translatable="false">.mp4</string>
+
+    <!-- Default file extension of a new recording -->
+    <string name="default_file_directory" translatable="false">@string/app_name</string>
+
 
 </resources>
