--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <!-- Menu option shown in overflow menu of main activity -->
     <string name="action_open_settings_title">Settings</string>
 
-    <!-- Dialog message when record audio permission denied -->
-    <string name="audio_perm_denied_message">Permission is required to record audio</string>
+    <!-- Dialog message when permissions denied during runtime -->
+    <string name="runtime_permissions_denied_message">These permissions are required for application to function</string>
 
 </resources>
